bugs fixed: scroll view, empty task, centered alignment

--- a/Yevhenii_Orenchuk/TODO/styles/index.scss
+++ b/Yevhenii_Orenchuk/TODO/styles/index.scss
@@ -9,12 +9,17 @@
 }
 .todo {
   display: flex;
+  position: absolute;
   width: 50%;
+  height: 100%;
+  right: 0;
   flex-direction: column;
 }
 .calendar {
+  position: absolute;
   display: flex;
   width: 50%;
+  height: 100%;
   float: right;
   justify-content: center;
   align-items: center;
