--- a/Yevhenii_Orenchuk/TODO/styles/todo.scss
+++ b/Yevhenii_Orenchuk/TODO/styles/todo.scss
@@ -10,13 +10,9 @@ $input-field-border-radius: 30px;
 .quote {
   font-weight: normal;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 10px;
   color: black;
-}
-.task-manager {
-  width: 500px;
-  margin: auto;
 }
 .input {
   height: $input-field-height;
@@ -56,18 +52,22 @@ $input-field-border-radius: 30px;
 }
 .tasks {
   padding-left: 20px;
-  //background-color: coral;
 }
 .tasks__item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
   align-content: center;
+  overflow: auto;
 }
 .tasks__buttons {
   padding: 0;
   margin: 10px;
+}
+.label-text {
+  width: auto;
+  overflow: scroll;
+  max-height: 72px;
 }
 .label-text--completed {
   text-decoration: line-through;
@@ -85,4 +85,14 @@ $input-field-border-radius: 30px;
   border: 1px solid red;
   border-radius: 3px;
   padding: 1px 6px;
+}
+.lists-container {
+  height: inherit;
+  overflow: scroll;
+}
+.task-manager {
+  width: 500px;
+  margin: 0 auto;
+  height: 80%;
+  overflow: hidden;
 }
